--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!--Akhir    Navbar -->
     <!-- Jumbotron -->
     <div class="jumbotron text-center">
-        <img src="jfnnew1.jpg" alt="" class="my-3" >
+        <img src="img/jfnnew1.jpg" alt="" class="my-3" >
         <h1>Jofan Fathurahman</h1>
         <i class="fas fa-grip-lines"></i>
         <i class="fas fa-desktop primary"></i>
