--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en" id="home">
 
@@ -93,17 +91,17 @@
             <div class="row">
                 <div class="col-sm-4">
                 <a href="" class="thubmnail">
-                    <img src="../img/img1.jpg" class="img-thumbnail" alt="">
+                    <img src="img/img1.jpg" class="img-thumbnail" alt="">
                 </a>
             </div>
             <div class="col-sm-4">
                 <a href="" class="thubmnail">
-                    <img src="../img/img2.jpg" class="img-thumbnail" alt="">
+                    <img src="img/img2.jpg" class="img-thumbnail" alt="">
                 </a>
             </div>
             <div class="col-sm-4">
                 <a href="" class="thubmnail">
-                    <img src="../img/img4.jpg" class="img-thumbnail" alt="">
+                    <img src="img/img4.jpg" class="img-thumbnail" alt="">
                 </a>
             </div>
             </div>    
