--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                 </div>
             <div class="row">
-                <div class="col-sm-8 offset-2">
+                <div class="col-sm-6 ">
                     <form action="" class="contak my-3">
                         <div class="form-group my-3">
                             <label for="nama" class="form-label">Nama </label>
