--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <i class="fas fa-grip-lines"></i>
                     </div>
                 </div>
-            <div class="row">
+            <div class="row d-flex justify-content-center">
                 <div class="col-sm-6 ">
                     <form action="" class="contak my-3">
                         <div class="form-group my-3">
