nambah JS di index.html

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     
 
     <!-- Optional JavaScript; choose one of the two! -->
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
