--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark  fixed-top">
+        <nav class="navbar navbar-expand-lg navbar navbar-collapse navbar-dark bg-dark  fixed-top">
             <div class="Container container-fluid">
               <a class=" ambil-data navbar-brand" href="#home" >Jofan Fathurahman</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
